@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `Encoder::encode` and `Decoder::decode` to generic methods
+  ({pull-request-url}/5[#5])
+
 == {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-10-14
 
 === Added
